--- a/ccbins_files/changelog.txt
+++ b/ccbins_files/changelog.txt
@@ -1,3 +1,6 @@
+15 - 9.25.2020
+* Change busybox binaries - fixes connection failed issues for some people
+
 14 - 9.18.2020
 * Another bug fix :/
 
