--- a/ccbins_files/changelog.txt
+++ b/ccbins_files/changelog.txt
@@ -2,6 +2,7 @@
 * Switch everything to curl, no need for ping or wget anymore
 * Add md5sum checks to verify downloads
 * Fixed permissions issues - clean install if you were having issues
+* Neaten things up
 
 15 - 9.25.2020
 * Go back to using google for ping check - github wasn't working for some people. Fallback to baidu if google fails (for chinese users)
